--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.1"
-  }
+    "mongoose": "^8.8.2"
+  },
+  "devDependencies": {},
+  "description": ""
 }
